--- a/tex/main.tex
+++ b/tex/main.tex
@@ -35,37 +35,38 @@ Influenza viruses constantly evolve~\cite{dos2016influenza},  producing  sequenc
 
 \input{figuresandtables.tex}
 
-In addition to  the seasonal flu epidemic posing a serious health concern, novel \infl strains spilling over into humans from animal reservoirs can cause global pandemics, as demonstrated four times (1918 H1N1, 1957 H2N2, 1968 H3N2, 2009 H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of sudden emergence of   COVID-19 and the ensuing devastating pandemic fresh in our minds, a looimng question  is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns},  thus harboring  a high potential  of triggering the next  pandemic.
+In addition to  the seasonal flu epidemic posing a serious health concern, novel \infl strains spilling over into humans from animal reservoirs can cause global pandemics, as demonstrated four times (1918 Spanish flu/H1N1, 1957 Asian flu/H2N2, 1968 hongkong flu/H3N2, 2009 swine flu/H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of sudden emergence of   COVID-19 and the ensuing devastating pandemic fresh in our minds, a looming question  is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns},  thus harboring  a high potential  of triggering the next  pandemic.
 
-A possible approach to mitigating such risk is to identify specific strains in animal hosts that do not yet circulate in humans, but have the potential to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
+A possible approach to mitigating such risk is to identify specific strains in animal hosts that do not yet circulate in humans, but have the potential to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual animal  strains  is limited.
 
-CDC's current solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
+CDC's current solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elements  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of successfully  preempting a pandemic.
 
 In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza}, HA and NA respectively. Uncovering and representing these constraints within a predictive framework, which we refer to as the \enet, allows us to estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild. Explicit quantification of these likelihoods then yields a numerical estimate of the probability of a specific strain of interest giving rise to another. Such numerical estimates are impossible to obtain without first inferring the emergent constraints at play specific to a strain,  as well as  the variation of mutational probabilities from one positional index to the next along the AA sequence. Thus, the many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference, are not applicable in this context. 
 
 
-
-The sequence data from public databases that we train  with represents strains that were collected in the wild, and hence necessarily have  sufficiently high replicative fitness, on account of the fact that  these strains need  to be present in sufficiently high numbers in circulation to be  observed. A lack of proofreading function in influenza viral RNA-polymerase leads to the integration of faulty nucleotides during the viral replication process with a rate of $10^{-3}$ to $10^{-4}$, which results in high mutation rates~\cite{ahlquist2002rna,chen2006avian}. However, only specific patterns of such variations can maintain or gain replicative fitness, implying that  the  dependencies between local variations that the \enet uncovers arises from a  functional necessity of maintaining high  fitness. However, these fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion}, changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
+On account of the fact that  a  strain needs  to be present in sufficiently high numbers in circulation to be  observed and recorded, the sequence data from public databases that we train  with represents strains with high replicative fitness. However, not all variations of the viral genome are equally viable. A lack of proofreading function in influenza viral RNA-polymerase leads to the integration of faulty nucleotides during the viral replication process with a rate of $10^{-3}$ to $10^{-4}$, which results in high mutation rates~\cite{ahlquist2002rna,chen2006avian}. Only specific patterns of such variations can maintain or gain replicative fitness, implying that  the  dependencies between local variations that the \enet uncovers arises from a  functional necessity of conserving or augmenting  fitness. However, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from   long-term evolution of cytotoxic T lymphocyte (CTL) epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} can change quickly. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
 
 The ability of the \enet framework to determine the numerical odds of specific sequence variations suggests that we might be able to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions (albeit with some simplifying assumptions), with demonstrated approximate solutions (Fig.~\ref{figscheme}). Thus,  a dominant strain for an upcoming flu season
 may be identified as one which maximizes the joint probability of simultaneosly arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).
 And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain.  We validate  our proposed solutions for these problems in out-of-sample data.
 
+\DQS{Add details replacing XXX}
+We infer our models using the AA sequences of HA and NA proteins from all available unique \infl strains in the NCBI and GISAID databases between the years XXX to present time (2022 April), which leads to a set of 98XXX strains in total. We only consider strains for which both HA and NA sequences are available, and construct \enet{s} separately for H1N1 and H3N2 subtypes, and for each flu season, and for each hemisphere. Thus, in total, we construct XXX models. We construct year specific models, construction a distinct \enet for each year's sequences collected from all over the world, whereas forecasts of next season's dominant strains are made for each flu season for each hemisphere separately.
 
-We infer our models using the AA sequences of HA and NA proteins from all available unique \infl strains in the NCBI and GISAID databases between the years XXX to present time (2022 April), which leads to a set of 98XXX strains in total. We only consider strains fro which both HA and NA sequences are available, and construct \enet for H1N1 and H3N2 subtypes. We construct year specific models, construction a distinct \enet for each year's sequences collected from all over the world, whereas forecasts of next season's dominant strains are made for each flu season for each hemisphere separately.
 
-Structurally, the \enet comprises a recursive forest of  cross-dependent predictors: each component predictor aims to model the amino acid ``outcome'' at a specific positional index of the protein of interest, using as features   the bases  at other and even possibly remote locations of the AA sequence of the protein (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a specific position. For example, XXX. Thus, the \enet comprises a  recursive collection of decision trees, with the number of trees upper bounded by the length of the AA sequence of the protein of interest. Importantly, these decision trees are conditional inference trees~\cite{Hothorn06unbiasedrecursive} that are%inferred 
+\DQS{add details and example of structure, fixing fig 1 to AA from ATGC}
+Structurally, the \enet comprises a recursive forest of  cross-dependent predictors: each component predictor aims to model the observed amino acid ``outcome'' at a specific positional index of the protein of interest, using as features   the bases  at other  locations of the protein sequence (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a specific position, yielding atmost as many such predictors as the sequence length of the protein.  For example, XXX. Thus, the \enet comprises a  recursive collection of decision trees, which in our current implementation are  conditional inference trees~\cite{Hothorn06unbiasedrecursive}, that make sure via significance tests at each potential data split that the inferred model has a minimum level of statistical significance.  %that are%inferred 
 % At the core of our algorithmic framework is a recursive forest of  cross-predicting conditional inference trees, which we refer to as the \enet,  
-inferred purely from the amino acid sequences of the proteins of interest with no additional phenotypic annotation, other than identifying the host animal. Despite limiting ourselves to only genotypic information, our approach to probing for deep emergent interdependencies   uncovers a rich structure of fitness-preserving constraints that enable good prediction of future dominant strains. Thus, our modeling approach is a fundamental departure from the state of the art; we do not assume models of mutation a priori, and we make use of little information that is specific to \infl genomic sequences, or its life cycle, beyond focusing on HA and NA which are known to be the main targets of neutralizing antibodies~\cite{shao2017evolution}.
+Importantly, the \enet component models are inferred purely from the amino acid sequences of the proteins of interest with no additional phenotypic annotation, other than identifying the host animal. Despite limiting ourselves to only genotypic information, our approach to probing for deep emergent interdependencies   uncovers a rich structure of fitness-preserving constraints that enable good prediction of future dominant strains. Thus, our modeling approach is a fundamental departure from the state of the art; we do not assume models of mutation a priori, and we make use of little information that is specific to \infl genomic sequences, or its life cycle, beyond focusing on HA and NA which are known to be the main targets of neutralizing antibodies~\cite{shao2017evolution}.
 
 
 % that allows us to  predict the likelihood of specific future  mutations, and  consequently, the numerical likelihood of specific  strains emerging through natural evolutionary processes. Evolutionary trajectories in the wild are shaped by complex hard-to-model selection pressures, and the \enet maximally incorporates the impact of these effects by  learning emergent patterns from public sequence databases.
 
-To validate our approach, we investigate two problems: 1)  if we can forecast dominant strains for the next flu season, and 2) if we can correctly identify high risk strains amongst those collected in non-human hosts in the wild.
-Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres.
-It is well-recognized that multiple hard-to-model factors can reduce vaccine effectiveness including selection of a vaccine strain that is not antigenically representative of future populations~\cite{gouma2020antigenic}, and even well-matched strains can 
-fail to induce a strong immune response due to previous infection history of vaccine recipients~\cite{cobey2018poor}. Nevertheless, identifying the ``most'' representative strain for the next season's vaccine is important, and our results outline a new sophisticated pattern-recognition-enabled approach to improve the effectiveness of the flu shot, outperforming current practice (WHO/CDC) as well as  recently reported prediction strategies  using more standard computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
-Importantly, our results indicate that \enet-informed forecast algorithm is able to leverage purely sequence information of specific strains, automatically in conjunction with the background distribution of high fitness strains, to  get a substantially  better predictive performance to what has been realized by the state-of-the-art, with and without the use of more detailed phenotypic information such deep mutational scanning data~\cite{huddleston2020integrating,neher2014predicting}.
+To validate our approach, we investigate two problems: 1)  forecast dominant strain(s) for the next flu season, and 2)  identify high risk strains amongst those collected in non-human hosts in the wild.
+Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. While it is recognized that 
+even well-matched strains can 
+fail to induce a strong immune response due to previous infection history of vaccine recipients~\cite{cobey2018poor}, strain-matching is a crucial component to realizing high vaccine effectiveness~\cite{gouma2020antigenic}. Our results outline a new sophisticated pattern-recognition-enabled approach to improve the effectiveness of the flu shot, outperforming current practice (WHO/CDC) as well as  recently reported prediction strategies  using more standard computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
+Importantly, our results indicate that \enet-informed forecast algorithm is able to leverage purely sequence information of specific strains and without   using more detailed phenotypic information such deep mutational scanning data,   get a substantially  better predictive performance to what has been realized by the state-of-the-art~\cite{huddleston2020integrating,neher2014predicting}.
 
 %\DQS{What phenotypic information is used by others}
 
@@ -86,14 +87,30 @@ Our primary claim, however,  is the ability to estimate the pandemic potential o
     4) How many sequences were used from which databases. Where is this info described (need this to appear in teh abstract as well)
     
     5) all qnets should be submitted to zenodo
-    }
+
+
+    It seems the old results were generated using a different version of quasinet package. Maybe we should indeed regenerate the results to make sure we can answer reviewer questions.
+
+    Target results:
+
+    1. HA NA recommendations, northern outhern hemispheres, with qnet constructed using 2 yeears of data (that is what we used last time)
+
+    2. check if recommendations match
+
+
+  }
+
+
+
  
+
+    
 
 \section*{Results}
 
-Aiming to validate our metric in the context of  viral evolution, we begin by collecting over $98,000$ Influenza A HA/NA nucleotide sequences from two public databases (NCBI % \href{https://www.ncbi.nlm.nih.gov/genome/viruses/}{https://www.ncbi.nlm.nih.gov/genome/viruses/}
+Aiming to validate our metric in the context of  viral evolution, we begin by collecting  $>98,000$ Influenza A HA/NA nucleotide sequences from two public databases (NCBI % \href{https://www.ncbi.nlm.nih.gov/genome/viruses/}{https://www.ncbi.nlm.nih.gov/genome/viruses/}
 and GISAID; % \href{https://www.gisaid.org/}{https://www.gisaid.org/}
-see SI-Table~\ref{SI-tabseq}), uncovering a network of  dependencies between individual mutations revealed through subtle variations of the aligned sequences. These dependencies define our organism-specific model referred to as the \textit{quasi-species network} or the \qnet (see Fig.~\ref{figscheme} and \ref{fig0}). The q-distance, informed by the dependencies modeled by the inferred {\qnet}s, adapts to the specific organism, allele frequencies, and variations in the background population. 
+see SI-Table~\ref{SI-tabseq}), uncovering a network of  dependencies between individual mutations revealed through subtle variations of the aligned sequences. The representation of these dependencies as a recursive forest of conditional inference trees is referred to as the \enet (see Fig.~\ref{figscheme} and \ref{fig0}). %The q-distance, informed by the dependencies modeled by the inferred {\qnet}s, adapts to the specific organism, allele frequencies, and variations in the background population. 
 
 Using aligned genomic sequences sampled from  similar populations, $e.g.$ HA from Human Influenza A in year 2008, we construct the \qnet via  customized machine learning algorithms to  learn models for predicting the mutational variations at each sequence index using other indices  as features. For example, in Fig.~\ref{fig0}a,  the predictor for index 1274 uses variation at index 1064 as a feature, and the predictor for index 1064 uses index 1314 as a feature, and so on -- ultimately uncovering a recursive dependency structure. The \qnet predicts the nucleotide distribution over the base alphabet at any specific index, conditioned on the nucleotides making up the rest of the sequence of the gene or genome fragment under consideration. Aside from this example, amino acids sequences can also be used to train the \qnet. Finally, we define the q-distance (see Eq.~\eqref{q-distance} in Materials and Methods) as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of these conditional distributions from one sequence to another, averaged over the entire sequence. Invoking Sanov's theorem on large deviations~\cite{cover}, we show  that the  likelihood of spontaneous change is bounded above and below by a simple exponential function of the  q-distance. 
 
